Fix x overflow in panel with thumbnail enabled

--- a/data/list.css
+++ b/data/list.css
@@ -14,6 +14,7 @@ body {
     line-height: 1.2em;
     
     -moz-user-select: none;
+    overflow-x: hidden;
 }
 
 ul {
@@ -117,7 +118,7 @@ a {
 
 #live.thumbnail li div {
     position: absolute;
-    width: 100%;
+    width: calc(100% - .6em);
     bottom: 0;
 }
 
